RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/ReportRender.css
.fr-render-sort-unsorted {    
    background-image:url('../../reportviewer/Images/NotSorted.gif');
    display:inline;
    background-repeat: no-repeat; 
    padding:2px 7px 2px 7px;
    background-position: center;
    cursor:pointer;
    float:right;
}

.fr-render-sort-descending {
    background-image:url(../../reportviewer/Images/SortDecending.gif);
    display:inline;
    background-repeat: no-repeat; 
    padding:2px 7px 2px 7px;
    background-position: center;
    cursor:pointer;
    float:right;
}

.fr-render-sort-ascending {
    background-image:url(../../reportviewer/Images/SortAccending.gif);
    display:inline;
    background-repeat: no-repeat; 
    padding:2px 7px 2px 7px;
    background-position: center;
    cursor:pointer;
    float:right;
}

.fr-rotate-90 {
    -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}
.fr-rotate-270{
   -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  -o-transform: rotate(270deg);
  transform: rotate(270deg);
}
.fr-render-error-details {
    cursor:pointer;
    color:blue;
}

.fr-render-drilldown-collapse {    
    background-image:url('../../reportviewer/Images/Drilldown_Collapse.gif');
    display:inline;
    background-repeat: no-repeat; 
    padding:2px 7px 2px 7px;
    background-position: center;
    cursor:pointer;
    float:left;
}

.fr-render-drilldown-expand {    
    background-image:url('../../reportviewer/Images/Drilldown_Expand.gif');
    display:inline;
    background-repeat: no-repeat; 
    padding:2px 7px 2px 7px;
    background-position: center;
    cursor:pointer;
    float:left;
}



.fr-render-list-circle {
    list-style-type:circle;
}
.fr-render-list-square {
    list-style-type:square;
}
.fr-render-list-disc{
    list-style-type:disc;
}
.fr-render-list-decimal{
    list-style-type:decimal;
}
.fr-render-list-.lower-roman {
    list-style-type:lower-roman;
}
.fr-render-list-lower-latin {
    list-style-type:lower-latin;
}


.fr-render-error
{
    margin:4px;
    left:10px;
}

.fr-render-error h3, h4
{
    color:red;
    font-weight:bold;
}

/*.fr-render-find-keyword
{
    color:red;
}*/

.fr-render-find-highlight
{
    background-color:Highlight;
    color:HighlightText;
}
.fr-render-bglayer
{
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: -1;
}

